Font fix on Safari Attempt
.ttf only?

--- a/assets/css/dave.css
+++ b/assets/css/dave.css
@@ -1,9 +1,11 @@
 /* IMPORTING FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @font-face {
-    font-family: "Shadower";
-    font-style: bold;
-    src: local(""), url("../fonts/Shadower.woff2") format("woff2");
+    font-family: 'Shadower';
+    src: url("../fonts/Shadower.ttf") format('truetype'); /* Safari, Android, iOS */
+             font-style: normal;
+    font-weight: bold;
+    text-rendering: optimizeLegibility;
 }
 
 /* BULLYING THE THEME INTO DOING WHAT I WANT */
@@ -25,3 +27,11 @@ h4, h5, h6, p, .gh-card-length, .gh-card-date, .gh-author-name, .gh-article-date
     font-family: 'Inter', sans-serif !important;
     font-weight: 500;
   }
+
+  /* WORKING, KINDA?
+  @font-face {
+    font-family: "Shadower";
+    font-style: bold;
+    src: local(""), url("../fonts/Shadower.woff2") format("woff2");
+}
+*/
